[tool.poetry]
name = "python-deterministc-runner"
version = "0.1.0"
description = "Run Python functions in deterministic wrapper"
authors = ["Chad Retz <chad.ret@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}, "lint-types"]
lint-types = "mypy ."
test = "pytest"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
